# mlbmodel

./: .env  .gitignore  CLAUDE.md  README.md  backtest.py  daily_runner.py  mlb.db  pipeline.py  predictions.csv  pyproject.toml  requirements.txt  verify_pipeline.py  xgb_model.json
.github/workflows/: daily-pipeline-backup.yml  daily-pipeline-v2.yml  daily-pipeline.yml  nightly-eval.yml  refresh-lineups-v2.yml  train-v2.yml
analysis/: 01_calibration.py  01b_calibration_clean.py  02_comeback_losses.py  03_bullpen_fatigue.py  PLAN_compounding_equity.md  README.md  __init__.py  _boxscores.py  _common.py  _linescores.py
analysis/blog_drafts/: bullpen_fatigue.md
backend/: cutover.py  db.py  evaluate_model.py  features.py  init_db.py  inspect_db.py  kelly.py  metrics.py  model.py  model_plots.py  simulation.py  strategy.py  team_mappings.py
backend/data/: __init__.py  bullpen_daily.py  fangraphs.py  mlb_api.py  odds_api.py  savant.py  weather.py
backend/scrapers/: scrape_bullpen.py  scrape_odds.py  scrape_park_factors  scrape_probable_starters.py  scrape_runs_per_game.py  scrape_season_scores.py  scrape_starting_pitchers.py  scrape_team_batting_vs_lhp.py  scrape_team_batting_vs_rhp.py
frontend/: app.py  package-lock.json  package.json
scripts/: __init__.py  backfill_bullpen_daily.py  backfill_eval_history.py  blog_charts.py  repair_eval_row.py
tests/: test_kelly.py  test_metrics.py  test_pitcher_split.py  test_win_prob.py
v2/: README.md  requirements.txt
v2/bayesian/: _common.py  _toy_check.py  batter_skill.py  fit_all.py  park_effects.py  pitcher_skill.py
(+97 files in other folders)
